Balance Sheet and Cash Flow Completed

--- a/poc/notebook/finiancials_eda.ipynb
+++ b/poc/notebook/finiancials_eda.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be80fd17",
+   "id": "e0786dda",
    "metadata": {},
    "outputs": [
     {
@@ -30,31 +30,33 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8c085663",
+   "id": "8225b971",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_fy_quarter_column(df, date_col='date', new_col='fy'):\n",
+    "def add_fy_quarter_column(df: pd.Series, date_col='date', new_col='fy'):\n",
     "    dates = pd.to_datetime(df[date_col])\n",
     "    \n",
     "    quarters = pd.Series(index=dates.index, dtype=\"object\")\n",
     "    fy_years = pd.Series(index=dates.index, dtype=\"int\")\n",
     "\n",
-    "    quarters[dates.dt.month.isin([4, 5, 6])] = 'Q1'\n",
+    "    quarters[dates.dt.month.isin([4, 5, 6])] = '1'\n",
     "    fy_years[dates.dt.month.isin([4, 5, 6])] = dates.dt.year + 1     # Add 1 year for Indian FY\n",
     "\n",
-    "    quarters[dates.dt.month.isin([7, 8, 9])] = 'Q2'\n",
+    "    quarters[dates.dt.month.isin([7, 8, 9])] = '2'\n",
     "    fy_years[dates.dt.month.isin([7, 8, 9])] = dates.dt.year + 1     # Add 1 year for Indian FY\n",
     "\n",
-    "    quarters[dates.dt.month.isin([10, 11, 12])] = 'Q3'\n",
+    "    quarters[dates.dt.month.isin([10, 11, 12])] = '3'\n",
     "    fy_years[dates.dt.month.isin([10, 11, 12])] = dates.dt.year + 1  # Add 1 year for Indian FY\n",
     "\n",
-    "    quarters[dates.dt.month.isin([1, 2, 3])] = 'Q4'\n",
+    "    quarters[dates.dt.month.isin([1, 2, 3])] = '4'\n",
     "    fy_years[dates.dt.month.isin([1, 2, 3])] = dates.dt.year         # Last Quarter stays in same year\n",
     "\n",
     "    fy_years = fy_years.astype('Int16')                              # Changing datatype from float to int for easier extraction of year\n",
     "\n",
-    "    df[new_col] = quarters + 'FY' + fy_years.astype(str).str[-2:]    # Extracting last 2 digits from year\n",
+    "    df[new_col] = 'Q' + quarters + 'FY' + fy_years.astype(str).str[-2:]    # Extracting last 2 digits from year\n",
+    "    df['quarter'] = quarters\n",
+    "    df['year'] = fy_years\n",
     "\n",
     "    return df"
    ]
@@ -62,27 +64,30 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "57023ebc-848a-4b25-9a7c-2df83abfc08d",
+   "id": "59af3ba9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_pnl(file_name):\n",
-    "    file_pnl = os.path.join(ini.raw_data_dir, file_name)\n",
-    "    pnl = pd.read_excel(file_pnl, sheet_name=\"profit_loss\")\n",
-    "    pnl.rename(columns={'Unnamed: 0': 'index'}, inplace=True)\n",
+    "def extract_financials(file_name: str, financials: str):\n",
+    "    '''\n",
+    "        Extract Data from excel file and convert into a celan DataFrame.\n",
+    "    '''\n",
+    "    file_financials = os.path.join(ini.raw_data_dir, file_name)\n",
+    "    dft = pd.read_excel(file_financials, sheet_name=financials)\n",
+    "    dft.rename(columns={'Unnamed: 0': 'index'}, inplace=True)\n",
     "\n",
-    "    pnlt = pnl.transpose()                                # Transpose the Table for horizontal format\n",
-    "    pnlt.columns = pnlt.iloc[0]                           # The column name i.e. the mertices are in the first row\n",
-    "    pnlt = pnlt.iloc[1:]                                  # Dropping the first row\n",
-    "    pnlt = pnlt.reset_index()                             # Date is in the index\n",
-    "    pnlt.rename(columns={\"index\": \"Date\"}, inplace=True)  # renaming the new columna as Date\n",
+    "    dft = dft.transpose()                                # Transpose the Table for horizontal format\n",
+    "    dft.columns = dft.iloc[0]                           # The column name i.e. the mertices are in the first row\n",
+    "    dft = dft.iloc[1:]                                  # Dropping the first row\n",
+    "    dft = dft.reset_index()                             # Date is in the index\n",
+    "    dft.rename(columns={\"index\": \"Date\"}, inplace=True)  # renaming the new columna as Date\n",
     "\n",
     "    # The date is converted incorrectly from the excel sheet as start of the month instead of end of the month\n",
     "    # The format of dates in Excel is Mar-14\n",
-    "    pnlt['Date'] = pnlt['Date'] + pd.offsets.MonthEnd(0)  # Setting 0 as parameter ensures that the date does not move to next month incase the date already is end of month\n",
+    "    dft['Date'] = dft['Date'] + pd.offsets.MonthEnd(0)  # Setting 0 as parameter ensures that the date does not move to next month incase the date already is end of month\n",
     "\n",
-    "    pnlt.columns = (\n",
-    "        pnlt.columns\n",
+    "    dft.columns = (\n",
+    "        dft.columns\n",
     "        .str.replace('-', '', regex=False)                # 1. Remove all hyphens\n",
     "        .str.strip()                                      # 2. Strip trailing/leading spaces\n",
     "        .str.replace(' ', '_')                            # 3. Replace spaces with underscores\n",
@@ -90,26 +95,26 @@
     "        .str.lower()                                      # 5. Lower the column names\n",
     "    )\n",
     "\n",
-    "    pnlt = add_fy_quarter_column(pnlt)                    # Adding fy column\n",
+    "    dft = add_fy_quarter_column(dft)                     # Adding fy column\n",
     "\n",
-    "    company_name = file_name.split('.')[0]                # Fetching company_name from file_name\n",
+    "    company_name = file_name.split('.')[0]               # Fetching company_name from file_name\n",
+    "    dft['company_name'] = company_name                   # Assigning company_name to all rows of dataframe\n",
     "\n",
-    "    pnlt['company_name'] = company_name                   # Assigning company_name to all rows of dataframe\n",
-    "\n",
-    "    return pnlt"
+    "    return dft"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "08e59e5f",
+   "execution_count": 4,
+   "id": "88b07958",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dynamic sql insertion function\n",
-    "def insert_df_with_executemany(df, schema_name, table_name, conn_params):\n",
+    "def insert_df_with_executemany(df: pd.Series, schema_name: str, table_name: str, conn_params: str):\n",
     "    '''\n",
     "        DataFrame and SQL Table should contain the same columns\n",
+    "        Dynamic sql insertion function\n",
     "    '''\n",
     "    conn = psycopg2.connect(conn_params)\n",
     "    cursor = conn.cursor()\n",
@@ -136,40 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0b602b89",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Insert query generated\n",
-      "\n",
-      "        INSERT INTO financials.pnl\n",
-      "        (date, sales, sales_growth_percent, expenses, manufacturing_cost_percent, employee_cost_percent, other_cost_percent, operating_profit, opm_percent, other_income, exceptional_items, other_income_normal, interest, depreciation, profit_before_tax, tax_percent, net_profit, exceptional_items_at, profit_excl_excep, profit_for_pe, profit_for_eps, eps_in_rs, dividend_payout_percent, fy, company_name) VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
-      "        ON CONFLICT (company_name, date, fy) DO NOTHING\n",
-      "    \n",
-      "Data inserted using executemany.\n"
-     ]
-    }
-   ],
-   "source": [
-    "file_name = 'hdfcamc.xlsx'\n",
-    "pnl = extract_pnl(file_name)\n",
-    "\n",
-    "schema_name = 'financials'\n",
-    "table_name = 'pnl'\n",
-    "insert_df_with_executemany(pnl, schema_name, table_name, ini.dsn)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "c474253c",
+   "id": "1a762b4a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cf = extract_financials('hdfcamc.xlsx', 'cash_flow')\n",
+    "insert_df_with_executemany(cf, schema_name='financials', table_name='cf', conn_params=ini.dsn)"
+   ]
   }
  ],
  "metadata": {
