Macro Ablr to Call API. Not able to populate cells yet.

--- a/poc/notebook/finiancials_eda.ipynb
+++ b/poc/notebook/finiancials_eda.ipynb
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8225b971",
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_fy_quarter_column(df: pd.Series, date_col='date', new_col='fy'):\n",
     "    dates = pd.to_datetime(df[date_col])\n",
-    "    \n",
+    "\n",
     "    quarters = pd.Series(index=dates.index, dtype=\"object\")\n",
     "    fy_years = pd.Series(index=dates.index, dtype=\"int\")\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "59af3ba9",
    "metadata": {},
    "outputs": [],
@@ -73,14 +73,14 @@
     "        Extract Data from excel file and convert into a celan DataFrame.\n",
     "    '''\n",
     "    file_financials = os.path.join(ini.raw_data_dir, file_name)\n",
-    "    dft = pd.read_excel(file_financials, sheet_name=financials)\n",
-    "    dft.rename(columns={'Unnamed: 0': 'index'}, inplace=True)\n",
+    "    df = pd.read_excel(file_financials, sheet_name=financials)\n",
+    "    df.rename(columns={'Unnamed: 0': 'index'}, inplace=True)\n",
     "\n",
-    "    dft = dft.transpose()                                # Transpose the Table for horizontal format\n",
-    "    dft.columns = dft.iloc[0]                           # The column name i.e. the mertices are in the first row\n",
-    "    dft = dft.iloc[1:]                                  # Dropping the first row\n",
-    "    dft = dft.reset_index()                             # Date is in the index\n",
-    "    dft.rename(columns={\"index\": \"Date\"}, inplace=True)  # renaming the new columna as Date\n",
+    "    dft = df.transpose()                                    # Transpose the Table for horizontal format\n",
+    "    dft.columns = dft.iloc[0]                               # The column name i.e. the mertices are in the first row\n",
+    "    dft = dft.iloc[1:]                                      # Dropping the first row\n",
+    "    dft = dft.reset_index()                                 # Date is in the index\n",
+    "    dft.rename(columns={\"index\": \"Date\"}, inplace=True)     # renaming the new columna as Date\n",
     "\n",
     "    # The date is converted incorrectly from the excel sheet as start of the month instead of end of the month\n",
     "    # The format of dates in Excel is Mar-14\n",
